recursion.cons.remove.Remove.scala.error
Erreur de compilation :
Remove:5: error: type mismatch;
 found   : Unit
 required: List[Int]
  if(l.tail!=v)
  ^Remove:4: error: type mismatch;
 found   : Unit
 required: List[Int]
  if(l.head != v)
  ^